--- a/client/src/pages/Home.modual.css
+++ b/client/src/pages/Home.modual.css
@@ -11,6 +11,7 @@ div {
 .card{
   background-color: white;
   box-shadow: 3px 5px 10px rgb(141, 141, 141);
+  padding: 2rem;
 }
 
 .bold{
@@ -84,6 +85,7 @@ div {
   border: 0;
   box-shadow: 1px 3px 5px rgb(141, 141, 141);
   font-weight: bold;
+  height: 4rem;
 }
 
 .mint-part-2{
@@ -112,11 +114,12 @@ div {
 .grid-container{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 2rem;
   height: fit-content;
 }
 
 .grid-item{
   text-align: left;
-  margin: 1rem;
+  margin-bottom: 1rem;
 }
 
